<resources>
    <string name="app_name">EllieCam</string>

    <string name="cancel">Cancel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit_camera">Edit Camera</string>
    <string name="action_remove_camera">Remove Camera</string>

    <string name="online">• ONLINE</string>
    <string name="offline">• OFFLINE</string>

    <string name="no_cameras">You do not have any configured cameras.</string>

    <string name="add_camera_title">Add Camera</string>

    <string name="label_camera_name">Camera Name</string>
    <string name="label_camera_url">Camera URL</string>
    <string name="label_camera_username">Username</string>
    <string name="label_camera_password">Password</string>
    <string name="label_save_camera">Save Camera</string>

    <string name="confirm_remove_camera">Are you sure you want to remove this camera?</string>

    <string-array name="camera_types">
        <item></item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
